buildscript {
  ext {
    queryDslVersion = "5.0.0"
  }
}

plugins {
  id 'org.springframework.boot' version '2.7.5'
  id 'io.spring.dependency-management' version '1.0.15.RELEASE'
  id 'java'
  id 'org.springframework.experimental.aot' version '0.12.1'
  id 'org.hibernate.orm'
  id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
}

group = 'com.modular'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

configurations {
  compileOnly {
    extendsFrom annotationProcessor
  }
  querydsl.extendsFrom compileClasspath
}

repositories {
  maven { url 'https://repo.spring.io/release' }
  mavenCentral()
}

dependencies {
  implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
  implementation 'org.springframework.boot:spring-boot-starter-security'
  implementation 'org.springframework.boot:spring-boot-starter-web'
  compileOnly 'org.projectlombok:lombok'
  implementation 'org.springframework.boot:spring-boot-starter-validation'
  developmentOnly 'org.springframework.boot:spring-boot-devtools'
  runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
  annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
  annotationProcessor 'org.projectlombok:lombok'
  testImplementation 'org.springframework.boot:spring-boot-starter-test'
  testImplementation 'org.springframework.security:spring-security-test'
  implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
  implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
  implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
  runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
  implementation "com.querydsl:querydsl-core:${queryDslVersion}"
  implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
  implementation "com.querydsl:querydsl-apt:${queryDslVersion}"
  implementation "org.springdoc:springdoc-openapi-ui:1.6.14"
  implementation "org.springdoc:springdoc-openapi-security:1.6.14"
}

test {
  file('./conf/spring/.env').readLines().each {
    def (key, value) = it.tokenize("=")
    environment key, value
  }
  useJUnitPlatform()
}

bootBuildImage {
  file('./conf/spring/.env').readLines().each {
    def (key, value) = it.tokenize("=")
    environment key, value
  }
  builder = 'paketobuildpacks/builder:tiny'
  environment = ['BP_NATIVE_IMAGE': 'true']
}

def querydslDir = "$buildDir/generated/querydsl"
querydsl {
  jpa = true
  querydslSourcesDir = querydslDir
}

sourceSets {
  main.java.srcDir querydslDir
}

compileQuerydsl {
  doFirst {
    delete "$buildDir/generated/querydsl/com"
  }
  options.annotationProcessorPath = configurations.querydsl
}

configurations {
  compileOnly {
    extendsFrom annotationProcessor
  }
  querydsl.extendsFrom compileClassPath
}
